@@ -1,11 +1,11 @@
 {
-  "count": 31,
-  "uniques": 12,
+  "count": 22,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 13,
-      "uniques": 8
+      "count": 4,
+      "uniques": 3
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
