@@ -1,3 +1,10 @@
+2022-06-03T08:08:39Z:
+* notice: last 14d: unq all: 7 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 407 1532 / 426 1563
+* notice: next accum: outdated-unq outdated-all / unq all: 407 1532 / 421 1554
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -5 -9 / +8 +13 -5 -9 / 3 4
+* notice: removed / changed dates: [] / [2022-05-20]
+
 2022-06-03T00:25:00Z:
 * notice: last 14d: unq all: 12 31
 * notice: prev accum: outdated-unq outdated-all / unq all: 407 1532 / 426 1562
